--- a/style.css
+++ b/style.css
@@ -1,81 +1,110 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins');
+<!DOCTYPE html>
+<html lang="en">
 
-body {
-    font-family: 'Poppins';
-}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ejercicio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
-header>div {
-    padding: 0 25px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 1px solid lightgray;
-}
+<body>
 
-nav {
-    width: 600px;
-}
+</body>
 
-nav ul {
-    list-style: none;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
+</html>
+<header>
+    <div>
+        <div>
+            <img class="blackHeart" src="images/black-heart.png" alt="black heart" />
+            <span> Nifty Penguin Magic </span>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#"> npm Enterprise </a></li>
+                <li><a href="#"> Products </a></li>
+                <li><a href="#"> Solutions </a></li>
+                <li><a href="#"> Resources </a></li>
+                <li><a href="#"> Docs </a></li>
+                <li><a href="#"> Support </a></li>
+            </ul>
+        </nav>
+    </div>
 
-a {
-    text-decoration: none;
-    color: black;
-}
+    <div class="topSearch">
+        <img class="npmLogo" src="images/npm-logo.png" alt="npm logo">
 
-.blackHeart {
-    width: 20px;
-    margin-right: 1rem;
-}
+        <form class="searchForm" action="/">
+            <input type="text" name="package-name" id="package-name" placeholder="Search packages">
+            <input type="submit" value="Search">
+        </form>
+        <div class="loginLinks">
+            <a class="loginLinks__join" href="">Join</a>
+            <a href="">Log In</a>
+        </div>
+    </div>
+</header>
 
-.topSearch {
-    padding: 0.5rem;
-}
-
-.npmLogo {
-    width: 150px;
-}
-
-.searchForm {
-    display: flex;
-}
-
-.searchForm>input {
-    padding: 1rem;
-    border: none;
-    /** 1 rem en cuatro direcciones*/
-
-}
-
-#package-name {
-    background-color: rgba(0, 0, 0, .05);
-    width: 350px;
-}
-
-input[type=submit] {
-    background-color: #fb3e44;
-    color: white;
-}
-
-.loginLinks {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-}
-
-.loginLinks>a {
-    color: rgba(0, 0, 0, .7);
-    padding: 0.4rem 1rem;
-    /** 0.4rem arriba y abajo de cada enlace, y 1rem izquierda y derecha de cada enlace*/
-}
-
-/** Porque esta nomenclatura ? Metodología BEM */
-.loginLinks__join {
-    border: 1px solid rgba(0, 0, 0, .7);
-
-}
+<section class="section-amazing">
+    <h1 class="section-amazing__title">
+        Build amazing
+        things
+    </h1>
+    <article class="section-amazing__description">
+        Essential JavaScript development tools that help you go to market faster and build powerful applications using
+        modern open source code.
+    </article>
+    <div class="section-amazing__links"><a class="link-see-plans" href="">See plans</a> <a href=""
+            class="link-join-free">Join for free</a>
+    </div>
+</section>
+<section>
+    <img src="images/triangle-hexagon.svg" alt="triangle hexagon">
+    <h2>Bring the best of open source to your company</h2>
+    <article>
+        npm is the tool used by
+        over 11,000,000 JavaScript developers around the world. Your developers already use it. Your company depends on
+        it.
+        Create an Org and get more out of the tools your team already knows and loves.
+    </article>
+</section>
+<section>
+    <div>
+        <div>
+            <img src="images/zero-configuration.svg" alt="">
+            <h3>Zero configuration</h3>
+            <p>
+                Create an org, add
+                your team, and start collaborating. Nothing to configure, set up, or manage.
+            </p>
+        </div>
+        <div>
+            <img src="images/team-management.svg" alt="team management">
+            <h3>Team management</h3>
+            <p>
+                Control who has
+                access
+                to
+                what modules within your team namespace using straightforward team management capabilities.
+            </p>
+        </div>
+        <div>
+            <img src="images/familiar-features.svg" alt="">
+            <h3>Familiar features</h3>
+            <p>
+                npm
+                Orgs
+                has 100% parity with all the public npm registry features your developers already use.
+            </p>
+        </div>
+        <div>
+            <img src="images/npm-audit.svg" alt="npm audit">
+            <h3>npm audit</h3>
+            <p>
+                Enjoy the
+                security
+                auditing features built into the npm client, a zero-friction way to make open source software safer.
+            </p>
+        </div>
+    </div><a href="">Create an Org</a>
+</section>
